# oam_iitk

./: .gitignore  README.md  app.py  app_link.py  config.ini  environment.yml  main.py  pyproject.toml  requirements.txt
backup/: helpers_sampling.py  novo_analysis.py  sampling.py  sampling_mp.py
bpp/: CLAUDE.md  Untitled.ipynb  dataset_config.py  feature_engineering.py  main_pipeline.py  predict.py  preprocess.py  take1.ipynb  to_predict_EC50.ipynb  train_models.py  transformations.py  transformers.py
bpp/models/: ec50_gcgr.joblib  ec50_gcgr_optimization.csv  ec50_gcgr_transformer.joblib  ec50_gip.joblib  ec50_gip_optimization.csv  ec50_glp1r_optimization.csv  kd_gcgr.joblib  kd_gcgr_optimization.csv  kd_glp1r.joblib  kd_glp1r_optimization.csv
bpp/training_data/: GCGR.csv  GIP.csv
configs/: fixed_params.py  path_config.py
funcs/: data_generator.py  email.py  helper_beam_search.py  helper_chem.py  helpers_data_io.py  helpers_data_processing.py  helpers_training.py  stauth.py
input_data/: gip_glp.txt
memory/gip_glp_refac/: config.ini  data_tr.txt  full_datalist.txt  idx_tr  idx_val
memory/gip_glp_refac/beam_search/: c24_SMILES.txt
memory/gip_glp_refac/generated_samples/: epoch_46  epoch_46_batch_1  epoch_47_batch_2  epoch_48_batch_1  epoch_49_batch_1  epoch_50_batch_2
memory/gip_glp_refac/models/: history
memory/gip_glp_vasu_20_march_11pm/: config.ini  data_tr.txt  full_datalist.txt  idx_tr  idx_val
memory/gip_glp_vasu_20_march_11pm/models/: history
processes/: beam_search.py  novo_analysis_org.py  processing.py  sampling_org.py  training.py
(+10 files in other folders)
